# prpr

./: .gitignore  Cargo.toml  README.md
assets/: gdscript.sublime-syntax  gdshader.sublime-syntax
docs/superpowers/plans/: 2026-05-06-commits-modal.md  2026-05-06-pprr-tui-pr-review.md  2026-05-06-prpr-tui-pr-review.md  2026-05-08-pr-list-auto-refresh.md  2026-05-19-incremental-fetch.md  2026-05-20-local-first-pr-review.md  2026-05-26-fancy-file-paths.md  2026-05-26-pr-list-inline-files.md  2026-07-02-pr-list-draft-and-mergeable.md  2026-07-03-toggle-pr-draft.md  2026-07-08-draft-gutter-rail.md
docs/superpowers/specs/: 2026-05-06-commits-modal-design.md  2026-05-06-pprr-tui-pr-review-design.md  2026-05-06-prpr-tui-pr-review-design.md  2026-05-08-pr-list-auto-refresh-design.md  2026-05-19-incremental-fetch-design.md  2026-05-20-local-first-pr-review-design.md  2026-05-26-fancy-file-paths-design.md  2026-05-26-pr-list-inline-files-design.md  2026-07-02-pr-list-draft-and-mergeable-design.md  2026-07-03-toggle-pr-draft-design.md  2026-07-08-draft-gutter-rail-design.md
src/: app.rs  config.rs  keys.rs  lib.rs  main.rs
src/data/: blame.rs  cache.rs  diff.rs  gh.rs  git.rs  log_patches.rs  mod.rs  pr.rs  worker.rs
src/render/: attribution.rs  color.rs  diff.rs  mod.rs  spinner.rs  style.rs  syntax.rs
src/view/: commits_modal.rs  file_picker.rs  help.rs  merge_modal.rs  mod.rs  pr_list.rs  pr_review.rs
tests/fixtures/: blame_porcelain.txt  diff_basic.patch  diff_numstat.txt  pr_list.json  pr_view.json
